# biostuff

./: .gitignore  CMakeLists.txt  Makefile  README.md  biostuff.m.cpp  fasta.m.cpp  fasta_parser.cpp  fasta_parser.h  fasta_record.cpp  fasta_record.h  test.fa
bwt/: CMakeLists.txt  bwt.cpp  bwt.h
fasta/: CMakeLists.txt  Makefile  fasta.m.cpp  fasta_record.cpp  fasta_record.h
fastq/: CMakeLists.txt  Makefile  fastq.m.cpp  fastq_record.cpp  fastq_record.h  test.fq
sequence/: CMakeLists.txt  sequence_fasta.cpp  sequence_fasta.h  sequence_fastq.cpp  sequence_fastq.h  sequence_generic.cpp  sequence_generic.h
test/: test.fa  test2.fa
